--- a/demo/demo-app.html
+++ b/demo/demo-app.html
@@ -16,12 +16,12 @@
       <span>[[item.published]]</span> <a href$="[[item.url]]">[[item.title]]</a><br>
     </template>
   </template>
-</dom-module>
 
-<script>
-  (function () {
-    Polymer({
-      is: "demo-app"
-    });
-  }());
-</script>
+  <script>
+    (function () {
+      Polymer({
+        is: 'demo-app'
+      });
+    }());
+  </script>
+</dom-module>
