Multipart upload support, e.g. for the drive api

--- a/demo/demo-docs.html
+++ b/demo/demo-docs.html
@@ -8,6 +8,6 @@
     <link rel="import" href="../discovery-api-docs.html">
   </head>
   <body>
-    <discovery-api-docs name="plus" version="v1"></discovery-api-docs>
+    <discovery-api-docs name="drive" version="v2"></discovery-api-docs>
   </body>
 </html>
