--- a/discovery-api-elements.html
+++ b/discovery-api-elements.html
@@ -225,61 +225,79 @@ that allow accessing them declaratively.
           );
         }
 
-        if (this.noClient) {
-          this._baseBehavior.properties._rootUrl = {
-            type: String,
-            value: this._discoveryDoc.rootUrl
-          };
+        this._baseBehavior.properties._rootUrl = {
+          type: String,
+          value: this._discoveryDoc.rootUrl
+        };
 
-          this._generalProperties.push({
-            name: ':_rootUrl',
-            private: true,
-            type: 'string'
-          });
+        this._generalProperties.push({
+          name: ':_rootUrl',
+          private: true,
+          type: 'string'
+        });
 
-          this._baseBehavior.properties._servicePath = {
-            type: String,
-            value: this._discoveryDoc.servicePath
-          };
+        this._baseBehavior.properties._servicePath = {
+          type: String,
+          value: this._discoveryDoc.servicePath
+        };
 
-          this._generalProperties.push({
-            name: ':_servicePath',
-            private: true,
-            type: 'string'
-          });
-        }
+        this._generalProperties.push({
+          name: ':_servicePath',
+          private: true,
+          type: 'string'
+        });
 
         if (this._discoveryDoc.resources) {
           Object.keys(this._discoveryDoc.resources).forEach(
             function (resourceName) {
               var resource = this._discoveryDoc.resources[resourceName];
               if (resource.methods) {
-                Object.keys(resource.methods).forEach(function (methodName) {
-                  this._createMethodElement(
-                    resourceName,
-                    methodName,
-                    resource.methods[methodName]
-                  );
-                }.bind(this));
+                this._createMethodElements(resourceName, resource.methods);
               }
             }.bind(this)
           );
         }
+
         if (this._discoveryDoc.methods) {
-          Object.keys(this._discoveryDoc.methods).forEach(
-            function (methodName) {
-              this._createMethodElement(
-                null,
-                methodName,
-                this._discoveryDoc.methods[methodName]
-              );
-            }.bind(this)
-          );
+          this._createMethodElements(null, this._discoveryDoc.methods);
         }
+
         this._finish();
       },
 
-      _createMethodElement: function (resourceName, methodName, method) {
+      _createMethodElements: function (resourceName, methods) {
+        Object.keys(methods).forEach(
+          function (methodName) {
+            var method = methods[methodName];
+            this._createMethodElement(
+              resourceName,
+              methodName,
+              method,
+              false
+            );
+
+            if (method.supportsMediaUpload) {
+              if (
+                method.mediaUpload &&
+                method.mediaUpload.protocols &&
+                method.mediaUpload.protocols.simple
+              ) {
+                this._createMethodElement(
+                  resourceName,
+                  methodName,
+                  method,
+                  true
+                );
+              }
+            }
+
+          }.bind(this)
+        );
+      },
+
+      _createMethodElement: function (
+        resourceName, methodName, method, upload
+      ) {
         var properties = {};
         var docProperties = [];
         var behavior;
@@ -289,6 +307,9 @@ that allow accessing them declaratively.
           elementName = elementName + '-' + resourceName;
         }
         elementName = elementName + '-' + methodName;
+        if (upload) {
+          elementName = elementName + '-upload';
+        }
         elementName = camelToDashCase(elementName);
 
         properties._apiName = {
@@ -310,6 +331,18 @@ that allow accessing them declaratively.
           properties._path = {
             type: String,
             value: method.path
+          };
+
+          properties._method = {
+            type: String,
+            value: method.httpMethod
+          };
+        }
+
+        if (upload) {
+          properties._path = {
+            type: String,
+            value: method.mediaUpload.protocols.simple.path
           };
 
           properties._method = {
@@ -346,17 +379,45 @@ that allow accessing them declaratively.
         }
 
         if (method.request) {
-          if (this.noClient) {
-            behavior = window.DiscoveryApiBehaviors.NoClientPostRequestBehavior;
-          } else {
-            behavior = window.DiscoveryApiBehaviors.ApiPostRequestBehavior;
-          }
           docProperties.push({
             name: 'body',
             published: true,
             type: 'Object',
             desc: 'Request Body: ' + method.request.$ref
           });
+
+          if (upload) {
+            docProperties.push({
+              name: 'data',
+              published: true,
+              type: 'String',
+              desc: 'Raw File Data to be uploaded'
+            });
+
+            docProperties.push({
+              name: 'mimeType',
+              published: true,
+              type: 'String',
+              desc: 'Mime type of the uploaded data. ' +
+                    'Defaults to application/octet-stream.'
+            });
+          }
+
+          if (upload) {
+            if (this.noClient) {
+              behavior = window.DiscoveryApiBehaviors
+                           .NoClientUploadRequestBehavior;
+            } else {
+              behavior = window.DiscoveryApiBehaviors.ApiUploadRequestBehavior;
+            }
+          } else {
+            if (this.noClient) {
+              behavior = window.DiscoveryApiBehaviors
+                           .NoClientPostRequestBehavior;
+            } else {
+              behavior = window.DiscoveryApiBehaviors.ApiPostRequestBehavior;
+            }
+          }
         } else {
           if (this.noClient) {
             behavior = window.DiscoveryApiBehaviors.NoClientRequestBehavior;
